--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js</title>
+  <title>stinkyy</title>
   <style>
     body {
       padding: 0;
@@ -18,7 +18,7 @@
 
 <body>
   <script src="sketch.js"></script>
-    
+
 </body>
 
 </html>
