--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
       margin: 0;
     }
   </style>
-  <script src="p5.js"></script>
-  <script src="addons/p5.sound.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.sound.min.js"></script>
+  <!-- <script src="p5.js"></script>
+  <script src="addons/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
 </head>
 
