--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>stinkyy</title>
+  <title>Simon Project1</title>
   <style>
     body {
       padding: 0;
